# stealth-battleship

./: .gitignore  CLAUDE.md  COMMIT.md  README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
app/: index.tsx  menu.tsx  placement.tsx
backend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: app.ts  log.ts  server.ts
backend/test/: e2e-full-match.ts
circuits/: .nargo-version  compile.sh
circuits/board_validity/: Nargo.toml
circuits/compiled/: shot_proof.json  turns_proof.json
circuits/hash_helper/: Nargo.toml
circuits/shot_proof/: Nargo.toml
circuits/turns_proof/: Nargo.toml
docs/: AI-BOT.md  ARCHITECTURE.md  HACKATHON-STELLAR-ZK-GAMING.md  PARTY-MODE-V4-NOTES.md  PRD-v2.md  PRD-v3.md  PRD.md  PVP-ONLINE-PLAN.md  REVIEW-DESIGN.md  REVIEW-v3.md  STATS-GUIDE.md  ZK-PIPELINE.md  ZK-PVP-DESIGN.md
docs/articles/: 01-devlog.md  01-diario-de-bordo.md  02-provando-sem-provar.md  02-proving-without-showing.md  03-provas-onchain-sqn.md  04-dois-navios-uma-batalha.md  04-two-ships-one-battle.md  05-214-xlm-lesson.md  05-214-xlm.md  index.html
docs/plans/: 2026-02-21-bloco1-circuits.md  2026-02-21-bloco2-zk-service-design.md  2026-02-21-bloco2-zk-service.md  2026-02-21-zk-arcade-pvp-roadmap.md  2026-02-22-trailer-cinematografico-design.md  2026-02-23-prod-zk-pvp-design.md  2026-02-23-prod-zk-pvp-implementation.md  2026-02-23-pvp-improvements-design.md  2026-02-23-pvp-improvements-plan.md  2026-02-23-supabase-migration-guide.md  2026-02-23-supabase-migration-plan.md  (+1 more)
frontend/: .env  app.json  jest.config.js  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml
mobile/: app.json  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
pitch/: PITCH.md
soroban/: Cargo.toml  deploy.sh  generate_vk.sh
soroban/contracts/battleship/: Cargo.toml
soroban/contracts/battleship/src/: lib.rs
soroban/contracts/verifier/: Cargo.toml
soroban/contracts/verifier/src/: lib.rs
soroban/vk/: repo.txt  vk_fields.json
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+427 files in other folders)
