[package]
name = "battleship-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk.git", package = "ultrahonk_soroban_verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
