[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../../vendor/ultrahonk-rust-verifier/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
